[metadata]
name = textwrapper
version = 1.0.2
description = Wraps text without breaking words.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/textwrapper
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = textwrapper
python_requires = >=3.6

[options.entry_points]
console_scripts =
    textwrap=textwrapper:cli
